include/El/lapack_like/perm.h

typedef struct
{
  ElInt align;
  MPI_Comm comm;

  int *sendCounts, *sendDispls,
      *recvCounts, *recvDispls;

  int numSendIdx, numRecvIdx;
  int *sendIdx, *sendRanks,
      *recvIdx, *recvRanks;
} ElPermutationMeta;
EL_EXPORT ElError ElPermutationMetaSet
( const ElDistMatrix_i p, const ElDistMatrix_i pInv, ElPermutationMeta* meta );
EL_EXPORT ElError ElPermutationMetaClear( const ElPermutationMeta* meta );
EL_EXPORT ElError ElPermutationMetaTotalSend
( const ElPermutationMeta* meta, int* total );
EL_EXPORT ElError ElPermutationMetaTotalRecv
( const ElPermutationMeta* meta, int* total );
EL_EXPORT ElError ElPermutationMetaScaleUp
( ElPermutationMeta* meta, ElInt length );
EL_EXPORT ElError ElPermutationMetaScaleDown
( ElPermutationMeta* meta, ElInt length );
/* Apply column pivots
   =================== */
EL_EXPORT ElError ElApplyColPivots_i
( ElMatrix_i A, ElConstMatrix_i pivots, ElInt offset );
EL_EXPORT ElError ElApplyColPivots_s
( ElMatrix_s A, ElConstMatrix_i pivots, ElInt offset );
EL_EXPORT ElError ElApplyColPivots_d
( ElMatrix_d A, ElConstMatrix_i pivots, ElInt offset );
EL_EXPORT ElError ElApplyColPivots_c
( ElMatrix_c A, ElConstMatrix_i pivots, ElInt offset );
EL_EXPORT ElError ElApplyColPivots_z
( ElMatrix_z A, ElConstMatrix_i pivots, ElInt offset );
EL_EXPORT ElError ElApplyColPivotsDist_i
( ElDistMatrix_i A, ElConstDistMatrix_i pivots, ElInt offset );
EL_EXPORT ElError ElApplyColPivotsDist_s
( ElDistMatrix_s A, ElConstDistMatrix_i pivots, ElInt offset );
EL_EXPORT ElError ElApplyColPivotsDist_d
( ElDistMatrix_d A, ElConstDistMatrix_i pivots, ElInt offset );
EL_EXPORT ElError ElApplyColPivotsDist_c
( ElDistMatrix_c A, ElConstDistMatrix_i pivots, ElInt offset );
EL_EXPORT ElError ElApplyColPivotsDist_z
( ElDistMatrix_z A, ElConstDistMatrix_i pivots, ElInt offset );
/* Apply row pivots
   ================ */
EL_EXPORT ElError ElApplyRowPivots_i
( ElMatrix_i A, ElConstMatrix_i pivots, ElInt offset );
EL_EXPORT ElError ElApplyRowPivots_s
( ElMatrix_s A, ElConstMatrix_i pivots, ElInt offset );
EL_EXPORT ElError ElApplyRowPivots_d
( ElMatrix_d A, ElConstMatrix_i pivots, ElInt offset );
EL_EXPORT ElError ElApplyRowPivots_c
( ElMatrix_c A, ElConstMatrix_i pivots, ElInt offset );
EL_EXPORT ElError ElApplyRowPivots_z
( ElMatrix_z A, ElConstMatrix_i pivots, ElInt offset );
EL_EXPORT ElError ElApplyRowPivotsDist_i
( ElDistMatrix_i A, ElConstDistMatrix_i pivots, ElInt offset );
EL_EXPORT ElError ElApplyRowPivotsDist_s
( ElDistMatrix_s A, ElConstDistMatrix_i pivots, ElInt offset );
EL_EXPORT ElError ElApplyRowPivotsDist_d
( ElDistMatrix_d A, ElConstDistMatrix_i pivots, ElInt offset );
EL_EXPORT ElError ElApplyRowPivotsDist_c
( ElDistMatrix_c A, ElConstDistMatrix_i pivots, ElInt offset );
EL_EXPORT ElError ElApplyRowPivotsDist_z
( ElDistMatrix_z A, ElConstDistMatrix_i pivots, ElInt offset );
/* Apply symmetric pivots
   ====================== */
EL_EXPORT ElError ElApplySymmetricPivots_i
( ElUpperOrLower uplo, ElMatrix_i A, ElConstMatrix_i p, ElInt offset );
EL_EXPORT ElError ElApplySymmetricPivots_s
( ElUpperOrLower uplo, ElMatrix_s A, ElConstMatrix_i p, ElInt offset );
EL_EXPORT ElError ElApplySymmetricPivots_d
( ElUpperOrLower uplo, ElMatrix_d A, ElConstMatrix_i p, ElInt offset );
EL_EXPORT ElError ElApplySymmetricPivots_c
( ElUpperOrLower uplo, ElMatrix_c A, ElConstMatrix_i p, 
  bool conjugate, ElInt offset );
EL_EXPORT ElError ElApplySymmetricPivots_z
( ElUpperOrLower uplo, ElMatrix_z A, ElConstMatrix_i p, 
  bool conjugate, ElInt offset );
EL_EXPORT ElError ElApplySymmetricPivotsDist_i
( ElUpperOrLower uplo, ElDistMatrix_i A, ElConstDistMatrix_i p, ElInt offset );
EL_EXPORT ElError ElApplySymmetricPivotsDist_s
( ElUpperOrLower uplo, ElDistMatrix_s A, ElConstDistMatrix_i p, ElInt offset );
EL_EXPORT ElError ElApplySymmetricPivotsDist_d
( ElUpperOrLower uplo, ElDistMatrix_d A, ElConstDistMatrix_i p, ElInt offset );
EL_EXPORT ElError ElApplySymmetricPivotsDist_c
( ElUpperOrLower uplo, ElDistMatrix_c A, ElConstDistMatrix_i p, 
  bool conjugate, ElInt offset );
EL_EXPORT ElError ElApplySymmetricPivotsDist_z
( ElUpperOrLower uplo, ElDistMatrix_z A, ElConstDistMatrix_i p, 
  bool conjugate, ElInt offset );